--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
 [project]
-name = "health-disease-detector"
+name = "health-dataset"
 version = "0.1.0"
-description = "Add your description here"
+description = "This project uses a binary classifier to detect whether a person has a particular disease. To evaluate the effectiveness of the model, we focus on three key performance metrics"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "matplotlib>=3.10.3",
+    "numpy>=2.3.0",
+    "pandas>=2.3.0",
+    "scikit-learn>=1.7.0",
+    "seaborn>=0.13.2",
+]
